<resources>
    <string name="app_name">Level1</string>
    <string name="profile_view_settings">Settings</string>
    <string name="profile_view_name">Lucile Alvarado</string>
    <string name="profile_view_profession">Graphic designer</string>
    <string name="profile_view_adress">5295 Gaylord Walks Apk. 110</string>
    <string name="profile_view_edit_btn">Edit Profile</string>
    <string name="profile_view_contacts_btn">view my contacts</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="reg_view_let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="reg_view_fillOut">Fill out the profile and go to the application!</string>
    <string name="signUp_chBx_text">Remember me</string>
    <string name="signUp_activ_regBtn_txt">register</string>
    <string name="reg_view_msg_terms">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="reg_activity_have_acc_msg">Already have an account?</string>
    <string name="reg_activity_sing_up_txtBtn">Sign in</string>
    <string name="wrong_pass_msg">Short or empty pass!</string>
    <string name="wrong_mail_msg">Wrong e-mail!</string>
</resources>